--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel-lang/lang": "~7.0",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "milon/barcode": "^8.0",
         "realrashid/sweet-alert": "^3.2"
     },
     "require-dev": {
